[react-components] Add z-index to Sidebar component (dropdown fix)

--- a/packages/react-components/src/Sidebar/index.styl
+++ b/packages/react-components/src/Sidebar/index.styl
@@ -5,6 +5,7 @@ $sidebar-background-color = rgba(black, 0.1)
 	width: 100%;
 	background-color: $sidebar-background-color;
 	overflow-y: auto;
+	z-index: 1;
 
 	+breakpoint("tablet")
 		width: $sidebar-width;
